found a name for the mysterious screen PixelFormat code returned on a Galaxy Nexus

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,7 @@
 	<string name="rgba_5551">RGBA_5551</string>
 	<string name="rgba_8888">RGBA_8888</string>
 	<string name="rgbx_8888">RGBX_8888</string>
+	<string name="bgra_8888">BGRA_8888</string>
 	<string name="translucent">TRANSLUCENT</string>
 	<string name="transparent">TRANSPARENT</string>
 	<string name="nv21">NV21</string>
