--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,9 +24,9 @@
 	<string name="width_dp_label">Width (dp):</string>
 	<string name="height_dp_label">Height (dp):</string>
 	<string name="smallest_dp_label">Smallest DP:</string>
-	<string name="screen_dpi_label">Screen DPI:</string>
-	<string name="actual_xdpi_label">X DPI:</string>
-	<string name="actual_ydpi_label">Y DPI:</string>
+	<string name="nominal_dpi_label">Nominal Screen DPI:</string>
+	<string name="actual_xdpi_label">Actual X DPI:</string>
+	<string name="actual_ydpi_label">Actual Y DPI:</string>
 	<string name="logical_density_label">Logical Density:</string>
 	<string name="font_scale_density_label">Font Scale Density:</string>
 	<string name="screen_diagonal_size_inches_label">Calc’d Diag - Screen - (inches):</string>
