might as well use symbolic name, and add new one

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,5 +98,6 @@
 	<string name="hdpi">hdpi</string>
 	<string name="xhdpi">xhdpi</string>
 	<string name="xxhdpi">xxhdpi</string>
+	<string name="xxxhdpi">xxxhdpi</string>
 	<string name="nosuch">\?%d</string>
 </resources>
